syntax = "proto2";

message BindingKey {
    repeated string parts = 1;
}
